# TerraBytes---RepoFlow

./: CLAUDE.md  README.md  structure.txt
backend/: .gitignore  gemini.py  gemini_client.py  main.py  pyproject.toml  repoProcessor.py  requirements.txt  smartChunking.py  workspace.json
backend/chunks.vector/: default__vector_store.json  docstore.json  index_store.json
backend/core/: config.py  database.py  gemini_client.py  subprocess_utils.py
backend/vector_db_chunks/: default__vector_store.json  docstore.json  index_store.json
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  ChatPage.jsx  RepoLink.jsx  WorkSpace.jsx  custom.css  main.jsx  repoLink.jsx
client/src/components/RepoLink/: RepoLink.jsx
client/src/components/WorkSpace/: WorkSpace.jsx
client/src/pages/: ChoicePage.css  ChoicePage.jsx  HomePage.jsx  PromptPage.jsx
